@@ -1,3 +1,8 @@
+2006-08-10  Andrew Stubbs  <andrew.stubbs@st.com>
+
+	* cli/cli-script.c (execute_user_command): Update command_next_depth
+	on user-command call.
+
 2006-08-09  Joel Brobecker  <brobecker@adacore.com>
 
 	* NEWS: Add entry for new substitute-path commands.
